working towards removing all clover code
